Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6688

Crash if adding deployment step "Make"

XMLWordPrintable

      To reproduce:

      1. Create a new "Qt Quick Application project" using the default values of the wizard.
      2. Go to Projects - Run Settings - Deployment
      2.1 Add Deploy Step: "Make" --> Segmentation Fault

      Backtrace (this is 0):

      0 Qt4ProjectManager::Qt4BuildConfiguration::makeCommand qt4buildconfiguration.cpp 315 0x7fffdc2e85f2
      1 Qt4ProjectManager::MakeStepConfigWidget::updateMakeOverrideLabel makestep.cpp 345 0x7fffdc2d0b89
      2 Qt4ProjectManager::MakeStepConfigWidget::MakeStepConfigWidget makestep.cpp 307 0x7fffdc2d07c6
      3 Qt4ProjectManager::MakeStep::createConfigWidget makestep.cpp 280 0x7fffdc2d05da
      4 ProjectExplorer::Internal::BuildStepsWidgetData::BuildStepsWidgetData buildstepspage.cpp 63 0x7fffdff3a6e5
      5 ProjectExplorer::Internal::BuildStepListWidget::addBuildStepWidget buildstepspage.cpp 233 0x7fffdff3bf17
      6 ProjectExplorer::Internal::BuildStepListWidget::addBuildStep buildstepspage.cpp 264 0x7fffdff3c1ed
      7 ProjectExplorer::Internal::BuildStepListWidget::qt_metacall moc_buildstepspage.cpp 90 0x7fffdffc152b
      8 QMetaObject::activate(QObject*, QMetaObject const*, int, void**) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtCore.so.4 0 0x7ffff645bed8
      9 ProjectExplorer::BuildStepList::stepInserted moc_buildsteplist.cpp 93 0x7fffdffb93cc
      10 ProjectExplorer::BuildStepList::insertStep buildsteplist.cpp 184 0x7fffdfec73f5
      11 ProjectExplorer::Internal::BuildStepListWidget::triggerAddBuildStep buildstepspage.cpp 257 0x7fffdff3c180
      12 ProjectExplorer::Internal::BuildStepListWidget::qt_metacall moc_buildstepspage.cpp 89 0x7fffdffc150b
      13 QMetaObject::activate(QObject*, QMetaObject const*, int, void**) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtCore.so.4 0 0x7ffff645bed8
      14 QAction::triggered(bool) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff6ca2f92
      15 QAction::activate(QAction::ActionEvent) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff6ca317f
      16 ?? /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff70c3b13
      17 ?? /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff70c9aca
      18 QWidget::event(QEvent*) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff6cfa818
      19 QMenu::event(QEvent*) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff70cacab
      20 QApplicationPrivate::notify_helper(QObject*, QEvent*) /home/nikolai/Projects/2011-11-14_TestQtCreator_2.4.0rc/Sources/qt-everywhere-opensource-4.7.4-root/lib/libQtGui.so.4 0 0x7ffff6ca9594
      ... <More>

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes