Fix crash on adding MakeSteps to a DeployConfiguration

Task-number: QTCREATORBUG-6688
Change-Id: I6d1e44ee0e1e67a5fc4289f508a7c285e4e6c13a
Reviewed-by: Tobias Hunger <tobias.hunger@nokia.com>